turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: not found: value setBrosseCouleur
    setBrosseCouleur(Color.white)
    ^LangtonsAnt:10: error: not found: value setBrosseCouleur
    setBrosseCouleur(Color.black)
    ^