turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol()==Color.black)
  {
    setBrosseCouleur(Color.white)
    paint()
    gauche()
    avance()
  }
  else if (getCouleurSol()==Color.black)
  {
    setBrosseCouleur(Color.black)
    paint()
    droite()
    avance()
  }
}

def paint() {
  baisseBrosse()
  leveBrosse()
}